# open

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_run_tests.yml
include/open/: open.hpp
include/open_link/: open_link.hpp
src/: open.cpp  open_link.cpp
tests/: CMakeLists.txt  logo.png - Shortcut.lnk  tests.cpp  é.txt  時分秒.md
